welcome.lessons.welcome.bat.bool1.CountTeen.scala.error
countTeen:7: error: type mismatch;
 found   : Unit
 required: Int
	return
        ^countTeen:5: error: type mismatch;
 found   : Unit
 required: Int
if (a >= 13 && a <= 19) {
^